syntax = "proto3";

option objc_class_prefix = "HLW";

package solrservice;

service SolrService {
    rpc UpdateSolr (SolrRequest) returns (SolrResponse) {}
    rpc CleanSolr (SolrRequest) returns (SolrResponse) {}
    rpc ScanNews (ScanNewsRequest) returns (ScanNewsResponse) {}
}

message SolrRequest {
}

message SolrResponse {
    bool success = 1;
    string message = 2;
}

message ScanNewsRequest {
    string content = 1;
}

message ScanNewsResponse {
    bool found = 1;
    repeated string tag = 2;
}